# lili-om

./: .gitignore  README.md
LiLi-OM/: CMakeLists.txt  package.xml
LiLi-OM-ROT/: CMakeLists.txt  package.xml
LiLi-OM-ROT/config/: config_fr_iosb.yaml  config_urban_hk.yaml  config_utbm.yaml  test.rviz
LiLi-OM-ROT/include/factors/: LidarKeyframeFactor.h  Preintegration.h
LiLi-OM-ROT/launch/: run_fr_iosb.launch  run_urban_hk.launch  run_utbm.launch
LiLi-OM-ROT/src/: BackendFusion.cpp  LidarOdometry.cpp  Preprocessing.cpp
LiLi-OM/config/: config_fr_iosb.yaml  config_fr_iosb_internal_imu.yaml  config_fr_iosb_tree.yaml  config_ka_urban_campus.yaml  config_ka_urban_east.yaml  config_ka_urban_schloss_1.yaml  config_ka_urban_schloss_2.yaml  test.rviz
LiLi-OM/include/factors/: ImuFactor.h  LidarKeyframeFactor.h  LidarPoseFactor.h  Preintegration.h  PriorFactor.h
LiLi-OM/include/utils/: common.h  math_tools.h
LiLi-OM/launch/: run_fr_iosb.launch  run_fr_iosb_internal_imu.launch  run_fr_iosb_tree.launch  run_ka_urban_campus.launch  run_ka_urban_east.launch  run_ka_urban_schloss_1.launch  run_ka_urban_schloss_2.launch
LiLi-OM/scripts/: InternalImuUnitConverter.py
LiLi-OM/src/: BackendFusion.cpp  FormatConvert.cpp  LidarOdometry.cpp  MarginalizationFactor.cpp  Preprocessing.cpp
